# CiudadIA_V3

./: .gitignore  README.md  ROLES_SETUP.md  contexto.ipynb  docker-compose.yaml
app/: main.py
backend/: .env.example  Dockerfile  dev-requirements.txt  pyproject.toml  requirements.txt
backend/src/: __init__.py  app.py  config.py  constants.py  deps.py  middleware.py  spec.py
backend/src/clients/: __init__.py  ml_client.py
backend/src/common/: __init__.py  responses.py
backend/src/db/: __init__.py  init_db.py  models.py  session.py
backend/src/models/: __init__.py  auth.py  errors.py  health.py  tickets.py
backend/src/routers/: __init__.py  admin_router.py  auth_router.py  citizen_router.py  health_router.py  items_router.py  router_template.py  tickets_router.py
backend/src/services/: __init__.py  anonymizer.py  auth_service.py  ticket_service.py
backend/tests/: __init__.py  conftest.py  test_admin_endpoints.py  test_anonymizer.py  test_auth.py  test_health.py  test_ticket_service.py  test_tickets_contract.py  test_tickets_router.py
frontend/: .env.example  Dockerfile  app.py  config.py  requirements.txt
frontend/routes/: auth.py  pages.py
frontend/schemas/: api.py
frontend/services/: api_client.py
frontend/static/css/: main.css
frontend/static/js/: app.js
frontend/templates/: admin_dashboard.html  base.html  citizen_dashboard.html  dashboard.html  items.html  login.html
frontend/tests/: test_smoke.py
