# Archivo estándar del ecosistema Python para definir metadatos,
# dependencias y configuración de herramientas del proyecto.

[project]
name = "ciudadia-backend"
version = "0.1.0"
description = "Backend del sistema de incidencias urbanas CiudadAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic-settings==2.9.1",
    "email-validator==2.2.0",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.30.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.3.0",
    "httpx==0.28.1",
]

# Configuración de pruebas con pytest.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

# Configuración de Ruff para linting y formato.
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"